# wt

./: .env  .gitignore  .prod.env  Cargo.toml  DigitalOcean-public.v2.yaml  a.js  ca-cert.pem  cert.crt  cert.csr  cert.key  cfg_prompt_schema.json  diesel.toml  fg.http  justfile  kafka-ca.crt  kp.json  root-ca.key.pem  root-ca.pem  trade.json  trades.json  trades.txt  user-access-key.key
.github/workflows/: runner.yaml
devops/: Cargo.toml
devops/src/: constant.rs  digitalocean_droplet.rs  dns_manager.rs  lib.rs  main.rs  ssh_executor.rs
js/: index.js  package-lock.json  package.json
migrations/2024-12-25-182657_init/: down.sql  up.sql
migrations/2024-12-26-131654_positions_kp/: down.sql  up.sql
migrations/2024-12-26-200740_pools_coin_pc/: down.sql  up.sql
migrations/2024-12-27-085338_trades_and_prices/: down.sql  up.sql
migrations/2024-12-27-085421_prices_trade_it/: down.sql  up.sql
migrations/2024-12-27-085447_remove_prices/: down.sql
migrations/2024-12-27-085500_readd_prices/: down.sql  up.sql
migrations/2024-12-27-132411_remove_trades/: down.sql  up.sql
migrations/2024-12-27-132424_readd_trades/: down.sql  up.sql
migrations/2024-12-28-173731_trade_pool_id/: down.sql  up.sql
migrations/2024-12-28-191502_trade_user_wallet/: down.sql  up.sql
migrations/2024-12-29-090702_drop_prices/: down.sql  up.sql
migrations/2024-12-29-090738_add_trade_prices/: down.sql  up.sql
migrations/2025-01-10-080142_add_users/: down.sql  up.sql
migrations/2025-01-10-092330_change_user_data/: down.sql  up.sql
migrations/2025-01-13-164728_add_users/: up.sql
prompts/: buy.json  cfg_prompt_schema.json  sell.json  trade.json  trade_prompt_schema.json  trade_request.json
pump/: README.md  bun.lockb  index.ts  package.json
raydium/amm/: Cargo.toml
raydium/amm/src/: lib.rs  math.rs  processor.rs  state.rs
raydium/amm_cli/: Cargo.toml
raydium/amm_cli/src/: amm_utils.rs  lib.rs  process_amm_commands.rs
raydium/common/: Cargo.toml
raydium/common/src/: common_utils.rs  lib.rs  rpc.rs
raydium/serum_dex/: Cargo.toml
raydium/serum_dex/src/: lib.rs  state.rs
services/trade-engine/: Cargo.toml
services/trade-engine/src/: amm_type.rs  api.rs  bg.rs  cache.rs  chan.rs  constant.rs  decode_tx.rs  engine.rs  impls.rs  instruction.rs  internal.rs  lib.rs  main.rs  poll.rs  pump.rs  rpc.rs  server.rs  signature.rs  solana.rs  state.rs  trade.rs  transaction.rs
services/users-api/: Cargo.toml
services/users-api/src/: client.rs  db.rs  lib.rs  main.rs  server.rs
services/users-lambda/: Cargo.toml  README.md
services/users-lambda/src/: main.rs
src/: api.rs  app_user_type.rs  bg_chan.rs  chan.rs  chan_bg.rs  chan_dsl.rs  chan_trade.rs  chan_type.rs  cmd.rs  constant.rs  db.rs  digitalocean_droplet.rs  digitalocean_droplet_utils.rs  dns_manager.rs  feedback.rs  feedback_api.rs  jito_chan.rs  lib.rs  listen_log.rs  listen_program.rs  main.rs  net.rs  plog.rs  position.rs  price.rs  program_log.rs  prompt_chan.rs  prompt_type.rs  pump.rs  ray_log.rs  rpc.rs  schema.rs  send_tx.rs  ssh_executor.rs  swap_config.rs  trade.rs  trade22.rs  trade_api.rs  trade_cache.rs  trade_chan.rs  (+11 more)
src/trade/: fmt.rs  mod.rs
src/user/: mod.rs
ssl/: cert.key.pem  cert.pem  fullchain.pem  privkey.pem  root-ca.key.pem  root-ca.pem
ui/: bun.lockb  package.json
ui/app/: page.tsx
ui/utils/: tradingLogGenerator.ts  websocket.ts
util/constant/: Cargo.toml
util/constant/src/: lib.rs
util/macros/src/: lib.rs
