[workspace]
resolver = "2"
members = [
    "raydium/*",
    "util/*",
    "services/*"
]

[workspace.dependencies]
solana-client = { version = "2.1.7" }
solana-program = { version = "2.1.7" }
solana-sdk = { version = "2.1.7" }
solana-transaction-status = { version = "2.1.7" }
spl-token = { version = "7.0.0" }
spl-associated-token-account = { version = "6.0.0" }
spl-associated-token-account-client = { version = "2.0.0" }
spl-token-2022 = { version = "6.0.0" }
mpl-token-metadata = { version = "5.1.0" }
solana-account-decoder = { version = "2.1.7" }
anchor-client = { git = "https://github.com/coral-xyz/anchor", rev = "955e7eaf61313bb514021dc073092256cb896bfc" }
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "955e7eaf61313bb514021dc073092256cb896bfc" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", rev = "955e7eaf61313bb514021dc073092256cb896bfc", features = ["memo", "metadata"] }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
anyhow = { version = "1.0.91" }
axum = { version = "0.8.1" }
tokio = { version = "1.41.1", features = ["full", "tracing"] }
mongodb = { version = "3.1.1" }
redis = { version = "0.27.5", features = ["rust_decimal", "json", "tokio-native-tls-comp", "connection-manager"] }
reqwest = { version = "0.12.5", default-features = false, features = ["json", "blocking", "cookies", "brotli", "gzip", "http2", "rustls-tls"] }
rdkafka = { version = "0.37.0", features = ["ssl"] }
base64 = { version = "0.22.1" }
bincode = { version = "1.3.3" }
bs58 = { version = "0.5.1" }
schemars = { version = "1.0.0-alpha.17", features = ["rust_decimal1", "chrono04"] }
yellowstone-grpc-client = { version = "4.1.0" }
yellowstone-grpc-proto = { version = "4.1.0" }
clap = { version = "4.0", features = ["derive"] }
openssh = "0.4"
ssh2 = { version = "0.9" }
diesel = { version = "2.2.6", features = ["chrono", "postgres", "serde_json"] } # no backend features need to be enabled
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool"] }
actix-web = { version = "4.9.0" }
actix-cors = { version = "0.7.0" }

[package]
name = "wolf_trader"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token-2022 = { workspace = true }
mpl-token-metadata = { workspace = true }
spl-associated-token-account-client = { workspace = true }
solana-account-decoder = { workspace = true }

actix-web = { workspace = true, optional = true }
actix-cors = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
rust_decimal = { version = "1.36.0", features = ["db-diesel2-postgres", "maths"] }
rust_decimal_macros = { version = "1.36.0" }
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = { version = "0.11.3" }
log = { version = "0.4.21" }
reqwest = { workspace = true, default-features = false, features = ["json", "blocking", "cookies", "brotli", "gzip", "http2", "rustls-tls"] }
tokio = { workspace = true, features = ["full", "tracing"] }
hex = { version = "0.4.3", optional = true }
rand = { version = "0.8.5", optional = true }
anyhow = { workspace = true }
awc = { version = "3.5.1", features = ["rustls"], optional = true }
#futures-util = { version = "0.3" , optional=true}
futures = { version = "0.3" }
url = { version = "2.5.4" }
actix-rt = { version = "2.5", optional = true }
getrandom = { version = "0.2.15", features = ["js"], optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
actix-ws = { version = "0.3.0", optional = true }
redis = { workspace = true, features = ["rust_decimal", "json", "tokio-native-tls-comp", "connection-manager"] }
redis-macros = { version = "0.4.2", optional = true }
bincode = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
diesel = { workspace = true, features = ["chrono", "postgres", "serde_json"], optional = true } # no backend features need to be enabled
diesel-async = { workspace = true, features = ["postgres", "deadpool"], optional = true }
raydium_amm = { path = "raydium/amm" }
amm-cli = { path = "raydium/amm_cli", optional = true }
common = { path = "raydium/common", optional = true }
serum_dex = { path = "raydium/serum_dex", optional = true }
jito-sdk-rust = { version = "0.1.0" }
futures-concurrency = { version = "7.6.2", optional = true }
console-subscriber = { version = "0.4.1", optional = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
fastrand = { version = "2.3.0" }
fastwebsockets = { version = "0.9.0", features = ["upgrade", "unstable-split", ] }
hyper-util = { version = "0.1.10" }
hyper = { version = "1.5.2" }
http-body-util = { version = "0.1.2" }
tokio-rustls = { version = "0.26.1" }
webpki-roots = { version = "0.26.7" }
colored = { version = "3.0.0" }
ollama-rs = { version = "0.2.2", features = ["function-calling"] }
schemars = { workspace = true, features = ["rust_decimal1", "chrono04"] }
async-openai = { version = "0.27.0" }
mongodb = { workspace = true }
axum = { workspace = true }
tower = { version = "0.5.2" }
rdkafka = { workspace = true, features = ["ssl"] }
tower-http = { version = "0.6.2", features = ["cors"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }

ssh2 = { workspace = true }

