[package]
name = "devops"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
tokio = {workspace = true}
anyhow = "1.0"  
clap = { version = "4.0", features = ["derive"] }


rustls = "0.20"
rustls-pemfile = "1.0"
base64 = "0.13"
